<resources>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="toolbox_no_apps_des_network_error_b">Please check you network and try again.</string>
    <string name="toolbox_no_apps_des_no_network_a">No network, please check your network and try again.</string>
    <string name="toolbox_no_apps_des_toolbox_empty_a">EMPTY TOOLBOX</string>
    <string name="toolbox_no_apps_des_toolbox_empty_b">No content, please try to refresh</string>
    <string name="toolbox_loading_switch_google_play_des">Switching to Google Play...</string>
    <string name="toolbox_loading_apps_info_des">Loading...</string>
    <string name="toolbox_no_browser_play">No browser or Google Play installed</string>
    <string name="toolbox_apps_footer_des_b_text">special recommendations</string>
    <string name="toolbox_no_apps_refresh_button_text">Refresh</string>
    <string name="banner_hot_games_button">HOT GAMES</string>
    <string name="banner_network_oops">Oops</string>
    <string name="banner_network_oops_message">@string/toolbox_no_apps_des_no_network_a</string>
    <string name="play_not_installed">Need Google Play app to login your google account</string>
    <string name="check_syncing">Syncing…</string>
    <string name="check_btn_continue">Continue</string>
    <string name="check_item_not_found">Item removed on server</string>
    <string name="check_sync_failed">Syncing failed, please try again.</string>
    <string name="check_total_coin_changed">Syncing DU Coins to %1$d</string>
    <string name="check_gain_changed_dialog_title">DU Coins changed</string>
    <string name="check_gain_changed_dialog_content">Coins changed: %1$d to %2$d. Continue?</string>
    <string name="coin_balance">Balance :</string>
    <string name="coin_whats_this"><u>"What's this?"</u></string>
    <string name="toolbox_downloads">%1$s downloads</string>
    <string name="toolbox_recently_viewed">Recently Viewed</string>
    <string name="toolbox_nonetwork_tips">Click to enable network for more free apps.</string>
    <string name="coin_balance_updated_success">DU Coins Updated.</string>
    <string name="coin_balance_updated_failed">Try to refresh later.</string>
    <string name="toolbox_enable_network_title">Enable network with</string>
    <string name="toolbox_enable_network_wifi">WLAN</string>
    <string name="toolbox_enable_network_mobile">Mobile Data</string>
    <string name="toolbox_nonetwork_message">No network, please open your network and try again</string>
    <string name="toolbox_app_not_available_title">OOOOPS!</string>
    <string name="toolbox_app_not_available_msg">THIS APP IS CURRENTLY NOT AVALIABLE.</string>
    <string name="toolbox_app_not_available_recommend">Switching to recommendation:</string>
    <string name="coin_get_limit">Get more DU coins tomorrow!</string>
    <string name="toolbox_apps_footer_des_a_text">DU Apps Studio</string>
    <string name="dxad_downloading">Downloading...</string>
    <string name="dxad_start_download">Start Down</string>
    <string name="dxad_download_done">Done</string>
    <string name="dxad_received_n_bytes">Received %s bytes</string>
    <string name="dxad_hint">Hint</string>
    <string name="dxad_download_stop">Stop download?</string>
    <string name="dxad_confirm">Confirm</string>
    <string name="dxad_cancel">Cancel</string>
    <string name="dxad_download_retry_hint">Download error,retry?</string>
    <string name="dxad_network_error">NetWork Error!</string>
    <string name="dxad_sdcard_error">sdcard Error!</string>
    <string name="widget_title">@string/app_name</string>
    <string name="widget_icon">app_icon</string>
    <string name="app_name">DU Battery Saver</string>
    <string name="app_name2">DU Battery</string>
    <string name="mid_widget_name">(4x1) DU Battery Saver</string>
    <string name="service_name">DU Battery Saver Service</string>
    <string name="mid_widget_service_name">(4x1) DU Battery Saver Widget</string>
    <string name="settings_widget_name">(4x1) DU Battery Saver Switch</string>
    <string name="tab_battery">Battery</string>
    <string name="power_usage">Monitor</string>
    <string name="health_charging_tab">Charge</string>
    <string name="apps_power_usage">Apps</string>
    <string name="hardware_power_usage">Hardware</string>
    <string name="tab_more">Settings</string>
    <string name="mode_label_longest_standby">Long</string>
    <string name="battery_info_remaining_discharging_time">"Time left: "</string>
    <string name="battery_info_remaining_charging_time">"Charging time left: "</string>
    <string name="ongoing_notification_battery_info_remaining_discharging_time">"Time left: "</string>
    <string name="ongoing_notification_battery_info_remaining_charging_time">"Charging time left: "</string>
    <string name="battery_info_value_unknown">Unknown</string>
    <string name="battery_info_value_health_good">Good</string>
    <string name="battery_info_value_health_over_heat">Overheating</string>
    <string name="battery_info_value_health_dead">Dead</string>
    <string name="battery_info_value_health_over_voltage">Overvoltage</string>
    <string name="battery_info_details_title">Battery Details</string>
    <string name="uid_label_android_system">Android System</string>
    <string name="uid_label_wlan_idle">Wi-Fi Idle</string>
    <string name="uid_label_bluetooth_idle">Bluetooth Idle</string>
    <string name="uid_label_cpu_idle">CPU Idle</string>
    <string name="uid_label_radio_active">Voice Call</string>
    <string name="uid_label_radio_data">Data</string>
    <string name="uid_label_radio_idle">Radio Idle</string>
    <string name="hw_label_unknown">Unknown</string>
    <string name="hw_label_screen">Screen</string>
    <string name="hw_label_wlan">Wi-Fi</string>
    <string name="hw_label_bluetooth">Bluetooth</string>
    <string name="hw_label_radio">Radio</string>
    <string name="hw_label_audio">Audio</string>
    <string name="hw_label_video">Video</string>
    <string name="hw_label_gps">GPS</string>
    <string name="hw_label_sensor">Sensor</string>
    <string name="hw_label_cpu">CPU</string>
    <string name="hw_savepower_unknown">" "</string>
    <string name="mode_newmode_off">Off</string>
    <string name="menu_update">Update</string>
    <string name="menu_feedback">Feedback</string>
    <string name="app_settings_protected">Protected List</string>
    <string name="app_setting_charging_ringtone">Charging Begin</string>
    <string name="app_setting_switchmode_notification">Mode Switch Reminder</string>
    <string name="app_setting_lowbattery_ringtong">Low Power Reminder</string>
    <string name="smart_settings_switchmode_lowbattery_mode">Schedule by power</string>
    <string name="smart_settings_switchmode_by_battery_des">Change modes according to battery level</string>
    <string name="smart_settings_switchmode_time_mode">Schedule by time</string>
    <string name="smart_settings_switchmode_time_des">Change modes based on time of day</string>
    <string name="menu_auto_cleanup_settings_title">Auto-Clear Apps</string>
    <string name="menu_auto_cleanup_settings_des">Clearing background apps can save power</string>
    <string name="cpu_settings">Lower CPU frequency</string>
    <string name="cpu_settings_des">Lower CPU frequency when screen locked</string>
    <string name="settings_onekey_control_des">One-key control for Wi-Fi, network, GPS, etc.</string>
    <string name="app_setting_notification">Notification Settings</string>
    <string name="calendar_week_monday">Mon</string>
    <string name="calendar_week_tuesday">Tue</string>
    <string name="calendar_week_wednesday">Wed</string>
    <string name="calendar_week_thursday">Thu</string>
    <string name="calendar_week_friday">Fri</string>
    <string name="calendar_week_saturday">Sat</string>
    <string name="calendar_week_sunday">Sun</string>
    <string name="app_setting_state">Status Settings</string>
    <string name="celsius_fahrenheit_title">Temperature Unit</string>
    <string name="app_setting_support">Support</string>
    <string name="settings_no_disturb">Do Not Disturb</string>
    <string name="smart_purchase_title">DU Battery Saver</string>
    <string name="sleep_floating_tips_show">Sleep Mode Reminder</string>
    <string name="settings_create_optimize_shortcut">Create Optimize Shortcut</string>
    <string name="settings_switches">Switches</string>
    <string name="app_settings_notification_title">Power Indicator</string>
    <string name="app_settings_protected_detail">App(s)</string>
    <string name="show_volunteer">Volunteers</string>
    <string name="more_settings_custom_settings">Custom Settings</string>
    <string name="more_settings_custom_settings_battery_theme">Battery Skin</string>
    <string name="user_tips_main_title_text">Tips</string>
    <string name="lock_screen_title">Network Control</string>
    <string name="lock_screen_summary">Automatically disable network when screen off</string>
    <string name="lock_clean_process_title">Screen Lock Auto-Clear</string>
    <string name="lock_clean_process_summary">Automatically clear apps when screen lock</string>
    <string name="app_setting_charging_reminder_title">Charge Reminder</string>
    <string name="auto_open_when_charge_string">Auto-open when charge</string>
    <string name="charging_done_lable">Charging Done</string>
    <string name="smart_settings_or">OR</string>
    <string name="smart_settings_update_by_money">$2.99</string>
    <string name="smart_settings_update_by_coin">1900</string>
    <string name="smart_purchase_vice_title">PRO</string>
</resources>