<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/mode_list_normal_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:power="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/smart_settings_content_margin_top" android:layout_marginBottom="@dimen/smart_settings_buttons_margin_top">
        <TextView android:textSize="@dimen/smart_settings_title_text_size" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smart_purchase_title" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/smart_settings_pro_text_size" android:textColor="@color/smart_settings_pro_title_text_color" android:gravity="center" android:id="@id/vice_title" android:background="@drawable/premiun_tip_bg" android:paddingLeft="@dimen/smart_settings_title_pro_padding_left_right" android:paddingTop="@dimen/smart_settings_title_pro_padding_top_bottom" android:paddingRight="@dimen/smart_settings_title_pro_padding_left_right" android:paddingBottom="@dimen/smart_settings_title_pro_padding_top_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/smart_settings_title_pro_margin" android:text="@string/smart_purchase_vice_title" android:layout_toRightOf="@id/title" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/smart_update" android:background="@color/mode_list_normal_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/smart_settings_buttons_margin_bottom">
        <TextView android:textSize="@dimen/smart_settings_vice_title_text_size" android:textColor="@color/smart_settings_gray" android:gravity="center" android:id="@id/update_or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/smart_update_buttons_margin_with_or" android:layout_marginRight="@dimen/smart_update_buttons_margin_with_or" android:text="@string/smart_settings_or" android:layout_centerInParent="true" />
        <Button android:textSize="@dimen/smart_settings_button_text_size" android:textColor="@color/local_white" android:id="@id/update_now" android:background="@drawable/about_button_rate_rate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/smart_settings_button_margin_left_right" android:text="@string/smart_settings_update_by_money" android:layout_toLeftOf="@id/update_or" />
        <RelativeLayout android:id="@id/update_by_score" android:background="@drawable/about_button_rate_rate" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/smart_settings_button_margin_left_right" android:layout_toRightOf="@id/update_or">
            <TextView android:textSize="@dimen/smart_settings_button_text_size" android:textColor="@color/local_white" android:gravity="center" android:id="@id/update_by_score_price" android:clickable="false" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smart_settings_update_by_coin" android:drawableLeft="@drawable/saver_smart_ducoinsicon" android:drawablePadding="2.0dip" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
    <include layout="@layout/coin_balance_bar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.dianxinos.powermanager.ui.ModeDxSwitchPreference android:id="@id/lock_clean_process" android:layout_width="fill_parent" android:layout_height="wrap_content" power:title="@string/lock_clean_process_title" power:summary="@string/lock_clean_process_summary" power:funcName="lockclear" />
            <ImageView android:background="@drawable/saver_page_list_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.dianxinos.powermanager.ui.ModeDxGotoPreference android:id="@id/auto_cleanup_setting" android:layout_width="fill_parent" android:layout_height="wrap_content" power:title="@string/menu_auto_cleanup_settings_title" power:summary="@string/menu_auto_cleanup_settings_des" power:enabled="true" power:funcName="autoclear" />
            <ImageView android:background="@drawable/saver_page_list_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.dianxinos.powermanager.ui.ModeDxGotoPreference android:id="@id/switchmode_by_time" android:layout_width="fill_parent" android:layout_height="wrap_content" power:title="@string/smart_settings_switchmode_time_mode" power:summary="@string/smart_settings_switchmode_time_des" power:enabled="true" power:funcName="autotime" />
            <ImageView android:background="@drawable/saver_page_list_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.dianxinos.powermanager.ui.ModeDxGotoPreference android:id="@id/switchmode_by_battery" android:layout_width="fill_parent" android:layout_height="wrap_content" power:title="@string/smart_settings_switchmode_lowbattery_mode" power:summary="@string/smart_settings_switchmode_by_battery_des" power:enabled="true" power:funcName="autopower" />
            <ImageView android:background="@drawable/saver_page_list_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.dianxinos.powermanager.ui.ModeDxSwitchPreference android:id="@id/lock_net_switch" android:layout_width="fill_parent" android:layout_height="wrap_content" power:title="@string/lock_screen_title" power:summary="@string/lock_screen_summary" power:funcName="autonet" />
            <ImageView android:background="@drawable/saver_page_list_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.dianxinos.powermanager.ui.ModeDxSwitchPreference android:id="@id/cpu_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" power:title="@string/cpu_settings" power:summary="@string/cpu_settings_des" power:funcName="autocpu" />
            <ImageView android:background="@drawable/gradient_shadow" android:layout_width="fill_parent" android:layout_height="@dimen/mode_list_shadow_line" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>